--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--theme);
   color: var(--white);
+  ;
+  
  
 }
 
@@ -33,6 +35,7 @@ a {
   align-items: center;
   margin: 0 auto;
   margin-top: 1rem;
+ 
 }
 
 .input-wrapper h1 {
